@@ -1,8 +1,10 @@
 CHANGES IN VERSION 2.0.16
 -------------------------
+    o annovarToMaf bug fix for results without exonic variants. Issue: #388
     o Avoid conflict with plotly::layout with graphcis::layout. Issue: #387
     o Fix side-bar heights in Oncoplot with copy-number data. Issue: #383
     o Update y-axis label for tcgaCompare plot. Issue: #366
+    o annovarToMaf annotating variants with MNPs. Issue: #335
 
 CHANGES IN VERSION 2.0.16
 -------------------------
